using lazy loading, update components to use signals, make performance up to 80%

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -1,19 +1,19 @@
 <section class="section py-5">
     <div class="w-custom mx-auto">
         <h3 class="fs-5 fw-semibold">Change Password</h3>
-        <form class="mb-2" (ngSubmit)="sendData()" [formGroup]="changePassword">
+        <form class="mb-2" (ngSubmit)="sendData()" [formGroup]="changePassword()">
             <div class="form-floating my-3">
                 <input id="currentPassword" type="password"
                     class="form-control rounded-0 border-gray px-3 w-100 py-3 border border-1"
                     placeholder="Current Password" formControlName="currentPassword" />
                 <label for="currentPassword">Current Password</label>
 
-                @if ((changePassword.get('currentPassword')?.touched || changePassword.get('currentPassword')?.dirty) &&
-                changePassword.get('currentPassword')?.errors) {
-                @if (changePassword.get('currentPassword')?.getError('required')) {
+                @if ((changePassword().get('currentPassword')?.touched || changePassword().get('currentPassword')?.dirty) &&
+                changePassword().get('currentPassword')?.errors) {
+                @if (changePassword().get('currentPassword')?.getError('required')) {
                 <p class="text-danger  small pt-1">Current Password is required</p>
                 }
-                @if (changePassword.get('currentPassword')?.getError('pattern')) {
+                @if (changePassword().get('currentPassword')?.getError('pattern')) {
                 <p class="text-danger  small pt-1">Current Password must be 6 digit at least.</p>
                 }
                 }
@@ -24,12 +24,12 @@
                     formControlName="password" />
                 <label for="password">Password</label>
 
-                @if ((changePassword.get('password')?.touched || changePassword.get('password')?.dirty) &&
-                changePassword.get('password')?.errors) {
-                @if (changePassword.get('password')?.getError('required')) {
+                @if ((changePassword().get('password')?.touched || changePassword().get('password')?.dirty) &&
+                changePassword().get('password')?.errors) {
+                @if (changePassword().get('password')?.getError('required')) {
                 <p class="text-danger  small pt-1">Password is required</p>
                 }
-                @if (changePassword.get('password')?.getError('pattern')) {
+                @if (changePassword().get('password')?.getError('pattern')) {
                 <p class="text-danger  small pt-1">Password must be 6 digit at least.</p>
                 }
                 }
@@ -40,16 +40,16 @@
                     placeholder="Conferm Password" formControlName="rePassword" />
                 <label for="rePassword">Confirm Password</label>
 
-                @if ( (changePassword.get('rePassword')?.touched || changePassword.get('rePassword')?.dirty) &&
-                changePassword.getError('mismatch')) {
+                @if ( (changePassword().get('rePassword')?.touched || changePassword().get('rePassword')?.dirty) &&
+                changePassword().getError('mismatch')) {
                 <p class="text-danger  small pt-1">confirm password must match password.</p>
                 }
             </div>
 
             <button type="submit" class="border-0 btn-special py-3 w-100 rounded-1 my-3 fs-6 fw-normal  text-white"
-                [disabled]="changePassword.invalid || isLoading">
+                [disabled]="changePassword().invalid ">
                 Change
-                @if (isLoading) {
+                @if (isLoading()) {
                 <i class="fa-spin fa-spinner fa ms-2"> </i>
                 }
 
