--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,6 +1,6 @@
 <section class="section py-1">
     <div class="container-fluid">
-        @if (placeholderLoading) {
+        @if (placeholderLoading()) {
         <div class="row">
             <div class="col-md-8">
                 <div class="row g-1 flex-nowrap flex-md-wrap overflow-x-auto">
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="row g-1 flex-nowrap flex-md-wrap overflow-x-auto">
-                    @for (image of product.images; track $index) {
+                    @for (image of product().images; track $index) {
                     <div class="col-12 col-md-6">
                         <img [src]="image" alt="" class="w-100">
                     </div>
@@ -36,34 +36,34 @@
                 </div>
             </div>
             <div class="col-md-4  py-4  fit-hight-content">
-                <h3 class="h5">{{product.title}}</h3>
-                <p class="fw-bold">EGP {{product.price }}</p>
+                <h3 class="h5">{{product().title}}</h3>
+                <p class="fw-bold">EGP {{product().price }}</p>
                 <div class="d-flex ">
-                    <app-star-rating [rating]="product.ratingsAverage"></app-star-rating>
-                    <p class="fw-medium ms-2">{{product.ratingsQuantity}} rate</p>
+                    <app-star-rating [rating]="product().ratingsAverage"></app-star-rating>
+                    <p class="fw-medium ms-2">{{product().ratingsQuantity}} rate</p>
                 </div>
-                <button (click)="addToCart(product.id)"
+                <button (click)="addToCart(product().id)"
                     class="w-100 btn-special text-white rounded-0 my-3 fs-6 py-2 border-0">
                     <span>ADD TO BAG </span>
-                    @if (isLoadingCart) {
+                    @if (isLoadingCart()) {
                     <div class="spinner-border spinner-border-sm" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
                     }
                 </button>
-                <button (click)="addToFavarite(product.id)"
+                <button (click)="addToFavarite(product().id)"
                     class="w-100 btn-outline-special text-black border border-black border-1 rounded-0 fs-6 py-2">ADD TO
                     <span>FAVARITES </span>
-                    @if (isLoadingFavarite) {
+                    @if (isLoadingFavarite()) {
                     <div class="spinner-border spinner-border-sm" role="status">
                         <span class="visually-hidden">Loading...</span>
                     </div>
                     }
                 </button>
-                <p class="fw-normal my-4">{{product.description}}</p>
+                <p class="fw-normal my-4">{{product().description}}</p>
                 <div class="d-flex">
-                    <p class="bg-light p-2 rounded-1 mx-1 text-gray">{{product.category.name}}</p>
-                    <p class="bg-light p-2 rounded-1 mx-1 text-gray">{{product.brand.name}}</p>
+                    <p class="bg-light p-2 rounded-1 mx-1 text-gray">{{product().category.name}}</p>
+                    <p class="bg-light p-2 rounded-1 mx-1 text-gray">{{product().brand.name}}</p>
                 </div>
                 <div class="d-flex fs-small align-items-center">
                     <i class="fa-solid fa-wallet me-3 fs-5"></i>
@@ -95,5 +95,5 @@
         </div>
         }
     </div>
-    <app-related-product [category]="product.category.name" [brand]="product.brand.name" />
+    <app-related-product [category]="product().category.name" [brand]="product().brand.name" />
 </section>
