--- a/src/app/components/action-loading/action-loading.component.html
+++ b/src/app/components/action-loading/action-loading.component.html
@@ -1,4 +1,4 @@
-@if (loading) {
+@if (loading()) {
 <div
     class="w-100 vh-100 position-fixed top-0 bottom-0 start-0 end-0 bg-black-50 text white d-flex justify-content-center align-items-center ">
     <h1>
