--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,17 +1,17 @@
 <section class="section py-3">
     <div class="container-fluid">
-        @if (placeholerLoading) {
+        @if (placeholerLoading()) {
         <app-cart-loading />
         }
         @else {
         <div class="row">
             <div class=" col-md-7   mx-auto ">
-                @if(productsInCart.products.length > 0){
+                @if(productsInCart()?.products){
                 <div class="d-flex justify-content-between py-3">
-                    <p class="text-muted fw-medium">Total items: {{productsInCart.products.length}} items</p>
+                    <p class="text-muted fw-medium">Total items: {{productsInCart()?.products?.length}} items</p>
                     <button (click)="clearAll()" class="bg-light text-danger border-0 px-3">
                         Clear All
-                        @if(isLoadingClearAll){
+                        @if(isLoadingClearAll()){
                         <div class="spinner-border spinner-border-sm" role="status">
                             <span class="visually-hidden">Loading...</span>
                         </div>
@@ -19,7 +19,7 @@
                     </button>
                 </div>
                 }
-                @for (productInCart of productsInCart.products; track $index) {
+                @for (productInCart of productsInCart()?.products; track $index) {
                 <app-cart-grid [productInCart]="productInCart" (productChanges)="getAllProductsInCart()" />
                 <hr>
                 }
@@ -31,12 +31,12 @@
                 }
 
             </div>
-            @if(productsInCart.products.length > 0){
+            @if(productsInCart()?.products){
             <div class=" col-md-3   mx-auto fit-hight-content py-3 py-sm-4">
 
                 <div class="d-flex justify-content-between">
                     <p class="text-muted fw-normal">Subtotal </p>
-                    <p class="text-muted fw-normal"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
+                    <p class="text-muted fw-normal"> {{productsInCart()?.totalCartPrice | currency:'EGP'}}</p>
                 </div>
                 <div class="d-flex justify-content-between">
                     <p class="text-muted fw-normal">Delivery </p>
@@ -47,9 +47,9 @@
                         <p class="text-black fw-medium my-0">Total </p>
                         <p class="text-muted my-0 fs-small fw-light">Taxes included </p>
                     </div>
-                    <p class="fw-medium"> {{productsInCart.totalCartPrice | currency:'EGP'}}</p>
+                    <p class="fw-medium"> {{productsInCart()?.totalCartPrice | currency:'EGP'}}</p>
                 </div>
-                <button [routerLink]="['/checkout', productsInCart._id]"
+                <button [routerLink]="['/checkout', productsInCart()?._id]"
                     class="my-4 w-100 btn-special text-white border-0 py-2 fs-6">Checkout</button>
                 <div class="d-flex my-1">
                     <i class="fa-solid fa-check me-2 "></i>
