--- a/src/app/components/favarite/favarite.component.html
+++ b/src/app/components/favarite/favarite.component.html
@@ -1,14 +1,14 @@
 <section class="section py-3">
     <div class="container-fluid">
         <div class="my-3">
-            <h3 class="h5 fw-medium">Wishlist ({{prodcuts.length}} items)</h3>
+            <h3 class="h5 fw-medium">Wishlist ({{prodcuts().length}} items)</h3>
         </div>
-        @if(placholderLoading){
+        @if(placholderLoading()){
         <app-placholder-loading [classInput]="'col-6 col-sm-6 col-md-3 col-lg-2'" [numberBoxes]="12" [styleImage]="'min-height: 200px'" />
         }
         @else {
         <div class="row g-3">
-            @for (product of prodcuts; track product.id) {
+            @for (product of prodcuts(); track product.id) {
             <div class=" col-6 col-sm-6 col-md-3 col-lg-2 ">
                <app-product-grid [product]="product" [styleImage]="'min-height:200px'" [inFavarite]="true" (productRemoved)="getAllProductsFavarite()"/>
             </div>
