--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -1,28 +1,28 @@
 <section class="section py-5">
     <div class="w-custom mx-auto">
         <!-- form 1 (verify email) -->
-        @if (status == "verifyEmail") {
+        @if (status() == "verifyEmail") {
         <h3 class="fs-5 fw-semibold">Verify Email</h3>
-        <form (ngSubmit)="verifyEmailFun()" [formGroup]="verifyEmail">
+        <form (ngSubmit)="verifyEmailFun()" [formGroup]="verifyEmail()">
             <div class="form-floating my-3">
                 <input id="email" type="text" class="form-control rounded-0 border-gray px-3 w-100 py-3 border border-1"
                     placeholder="Email" formControlName="email" />
                 <label for="email">email</label>
 
-                @if ((verifyEmail.get('email')?.touched || verifyEmail.get('email')?.dirty) &&
-                verifyEmail.get('email')?.errors) {
-                @if (verifyEmail.get('email')?.getError('required')) {
+                @if ((verifyEmail().get('email')?.touched || verifyEmail().get('email')?.dirty) &&
+                verifyEmail().get('email')?.errors) {
+                @if (verifyEmail().get('email')?.getError('required')) {
                 <p class="text-danger  small pt-1">Email is required</p>
                 }
-                @if (verifyEmail.get('email')?.getError('email')) {
+                @if (verifyEmail().get('email')?.getError('email')) {
                 <p class="text-danger  small pt-1">Invalid email format</p>
                 }
                 }
             </div>
             <button type="submit" class="border-0 btn-special py-3 w-100 rounded-1 my-3 fs-6 fw-normal  text-white"
-                [disabled]="verifyEmail.invalid || isLoading">
+                [disabled]="verifyEmail().invalid || isLoading">
                 Verify Email
-                @if (isLoading) {
+                @if (isLoading()) {
                 <i class="fa-spin fa-spinner fa ms-2"> </i>
                 }
 
@@ -35,28 +35,28 @@
 
         <!-- form 2 (verify code) -->
 
-        @if(status == "verifyCode"){
+        @if(status() == "verifyCode"){
         <h3 class="fs-5 fw-semibold">Verify Code</h3>
-        <form (ngSubmit)="verifyCodeFun()" [formGroup]="verifyCode">
+        <form (ngSubmit)="verifyCodeFun()" [formGroup]="verifyCode()">
             <div class="form-floating my-3">
                 <input id="resetCode" type="text"
                     class="form-control rounded-0 border-gray px-3 w-100 py-3 border border-1" placeholder="Reset Code"
                     formControlName="resetCode" />
                 <label for="resetCode">Reset Code</label>
-                @if ((verifyCode.get('resetCode')?.touched || verifyCode.get('resetCode')?.dirty) &&
-                verifyCode.get('resetCode')?.errors) {
-                @if (verifyCode.get('resetCode')?.getError('required')) {
+                @if ((verifyCode().get('resetCode')?.touched || verifyCode().get('resetCode')?.dirty) &&
+                verifyCode().get('resetCode')?.errors) {
+                @if (verifyCode().get('resetCode')?.getError('required')) {
                 <p class="text-danger  small pt-1">Reset Code is required</p>
                 }
-                @if (verifyCode.get('resetCode')?.getError('pattern')) {
+                @if (verifyCode().get('resetCode')?.getError('pattern')) {
                 <p class="text-danger  small pt-1">Code must be 6 numbers</p>
                 }
                 }
             </div>
             <button type="submit" class="border-0 btn-special py-3 w-100 rounded-1 my-3 fs-6 fw-normal  text-white"
-                [disabled]="verifyCode.invalid || isLoading">
+                [disabled]="verifyCode().invalid || isLoading">
                 Send
-                @if (isLoading) {
+                @if (isLoading()) {
                 <i class="fa-spin fa-spinner fa ms-2"> </i>
                 }
 
@@ -66,21 +66,21 @@
         }
 
         <!-- form 3 (forget password) -->
-        @if(status == "forgetPassword"){
+        @if(status() == "forgetPassword"){
         <h3 class="fs-5 fw-semibold">Change Password</h3>
-        <form (ngSubmit)="forgetPasswordFun()" [formGroup]="resetPassword">
+        <form (ngSubmit)="forgetPasswordFun()" [formGroup]="resetPassword()">
             <div class="form-floating my-3">
                 <input readonly id="email" type="text"
                     class="form-control rounded-0 border-gray px-3 w-100 py-3 border border-1" placeholder="Email"
                     formControlName="email" />
                 <label for="email">email</label>
 
-                @if ((resetPassword.get('email')?.touched || resetPassword.get('email')?.dirty) &&
-                resetPassword.get('email')?.errors) {
-                @if (resetPassword.get('email')?.getError('required')) {
+                @if ((resetPassword().get('email')?.touched || resetPassword().get('email')?.dirty) &&
+                resetPassword().get('email')?.errors) {
+                @if (resetPassword().get('email')?.getError('required')) {
                 <p class="text-danger  small pt-1">Email is required</p>
                 }
-                @if (resetPassword.get('email')?.getError('email')) {
+                @if (resetPassword().get('email')?.getError('email')) {
                 <p class="text-danger  small pt-1">Invalid email format</p>
                 }
                 }
@@ -91,20 +91,20 @@
                     placeholder="New Password" formControlName="newPassword" />
                 <label for="password">New Password</label>
 
-                @if ((resetPassword.get('newPassword')?.touched || resetPassword.get('newPassword')?.dirty) &&
-                resetPassword.get('newPassword')?.errors) {
-                @if (resetPassword.get('newPassword')?.getError('required')) {
+                @if ((resetPassword().get('newPassword')?.touched || resetPassword().get('newPassword')?.dirty) &&
+                resetPassword().get('newPassword')?.errors) {
+                @if (resetPassword().get('newPassword')?.getError('required')) {
                 <p class="text-danger  small pt-1">Password is required</p>
                 }
-                @if (resetPassword.get('newPassword')?.getError('pattern')) {
+                @if (resetPassword().get('newPassword')?.getError('pattern')) {
                 <p class="text-danger  small pt-1">Password must be 6 digit at least.</p>
                 }
                 }
             </div>
             <button type="submit" class="border-0 btn-special py-3 w-100 rounded-1 my-3 fs-6 fw-normal  text-white"
-                [disabled]="resetPassword.invalid || isLoading">
+                [disabled]="resetPassword().invalid || isLoading">
                 Reset Password
-                @if (isLoading) {
+                @if (isLoading()) {
                 <i class="fa-spin fa-spinner fa ms-2"> </i>
                 }
 
@@ -113,12 +113,12 @@
         </form>
         }
         <!-- error message display here -->
-        @if (errorMessage) {
-        <p class="fs-6 text-danger fw-medium">{{errorMessage}}</p>
+        @if (errorMessage()) {
+        <p class="fs-6 text-danger fw-medium">{{errorMessage()}}</p>
         }
         <!-- success message display here -->
-        @if (successMessage) {
-        <p class="fs-6 text-success fw-medium">{{successMessage}}</p>
+        @if (successMessage()) {
+        <p class="fs-6 text-success fw-medium">{{successMessage()}}</p>
         }
         <!-- back to login -->
         <div class="d-flex justify-content-center">
