--- a/src/app/components/related-product/related-product.component.html
+++ b/src/app/components/related-product/related-product.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid py-5">
-    @if(placholderLoading){
+    @if(placholderLoading()){
     <app-placholder-loading [numberBoxes]="12" [classInput]="'col-6 col-sm-6 col-md-4 col-lg-2'" [styleImage]="'min-height: 200px'" />
     }@else {
     <div class="row g-3">
         <h3 class="h5 fw-medium my-4">Related products </h3>
-        @for (product of relatedProducts; track product.id; ) {
+        @for (product of relatedProducts(); track product.id; ) {
         <div class=" col-6 col-sm-6 col-md-4 col-lg-2 ">
             <app-product-grid [product]="product" [styleImage]="'min-height: 200px'"/>
 
