using lazy loading to increase performance, updaet components and using signals

--- a/src/app/components/main-navbar/main-navbar.component.html
+++ b/src/app/components/main-navbar/main-navbar.component.html
@@ -11,7 +11,7 @@
         <li class="nav-item">
           <a class="nav-link text-black fw-medium" aria-current="page" routerLinkActive="border-bottom border-black" routerLink="/products">Products</a>
         </li>
-        @if(isLogin()){
+        @if(userLogin()){
         <li class="nav-item">
           <a class="nav-link text-black fw-medium " aria-current="page" routerLinkActive="border-bottom border-black" routerLink="/profile">Profile</a>
         </li>
